app/templates/deploy/k8s/dr/route.yml
apiVersion: v1
kind: Route
metadata:
  name: digital-service-banker-assignment-test-apiserver
  namespace: dct-nextgen-services
spec:
  host: dct-nxgn.dc2.corp.firstrepublic.com
  path: /bnkrasgnmttesttest/v1
  tls:
    termination: edge
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAuZoIaxQe63JgjclUDV30eul/zlLTkG5qx8c4mENAEjIxnw+A
[...]
      dfTX19qPp7mUXLhpoecjeOrfL3XoFeXRfZkLInbsIoAEfgcAG7K1
      -----END RSA PRIVATE KEY-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGTzCCBTegAwIBAgITJAABQvRA8bqE/kwQQwABAAFC9DANBgkqhkiG9w0BAQsF
[...]
      7uhtNWbObHKQ4G38aauOT9bsf/bF9XD3o2c/BAoOMx8L7vo=
      -----END CERTIFICATE-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFlzCCA3+gAwIBAgITQwAAAAQbbl+UmEzvGAABAAAABDANBgkqhkiG9w0BAQsF
[...]
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFxDCCA6ygAwIBAgIQee6xOfUvPYZFEmIQS5PNpzANBgkqhkiG9w0BAQsFADAV
[...]
      ls15kpGEcwi8EgQ/CvjQtEys50slX0CoZ6HTuBInkQYccsGytdyVJQ==
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: digital-service-banker-assignment-test-apiserver
